DigIt CHANGE LOG
======================

2024/11/
        21 Added Counters RemoveAllButFirst;
	   Changed GetCurrentCounter to work with CropMode;
	   Changed Temp Path Location to Path_Config\tmp;
	   Added Progress to Crop_Full;
	   Use of DeleteDirectory to Delete Temp Files in Source_WIA.
        20 Adjusted UI Enable,Fill,etc in Main Form;
	   Added Progress Interface in Bridge;
	   Implemented Progress Interface in new Form_Progress;
	   Commented Source_WIA Set Pages=1 in preview (strange Brother Scanner behaviour)
	19 Added SourceFiles_Add, CropFile_Full methods;
	   Added SourceFiles Array (also in Load/Save XML Work);
	   Rewrite of Form Take method to use SourceFiles Array;
	   Changed Enabled of Take always to True when CropMode is FullArea;
	   Rewrite of Wia Source Take to use DownloadedFiles and IDigIt_ROArray;
	18 Added CropNext/Prev/All actions;
	   Deleted diCropAdvanced mode, take only Custom;
	   Re Added WIA Source with new Take params (must be tested);
        15 Added CropMode;
	   Added Array Interfaces;
	   Preview return a Single Filename and Take returns Array Interfaces;
	   Changed Entire acquisition structure with Take/Crop.
        12 Changed Source_Wia onSet method.
        07 Writed WIA Source Load/Save from XML;
	   Writed WIA Source OnSet maybe deeply tested;
	   Added defualt value when Load from XML in Twain Source
        06 Changed Interfaces method Enabled and added setEnabled;
	   Added Test of Interfaces Init in Register;
	   Added Test of Interfaces Enabled in Menu Build;
	   Added Enabled to False in Twain/WIA if no dll/wia manager founds;
	   First WIAParams save tests
        05 First Write of TDigIt_Source_WIA.GetFromUser 
        04 Added DigIt_Sources, DigIt_Destinations for future multiplatform use;
           Changed DigIt_Dest_SaveFiles_SettingsForm filename to DigIt_Destination_SaveFiles_SettingsForm;
           Moved use of DigIt_Source_XXX inside DigIt_Sources;