@@ -14,13 +14,13 @@ object DigIt_Main: TDigIt_Main
   OnShow = FormShow
   object tbMain: TToolBar
     Left = 0
-    Height = 50
+    Height = 52
     Top = 0
     Width = 1024
     AutoSize = True
     BorderSpacing.Bottom = 8
-    ButtonHeight = 48
-    ButtonWidth = 48
+    ButtonHeight = 50
+    ButtonWidth = 50
     Caption = 'tbMain'
     Images = imgListMain
     ParentShowHint = False
@@ -29,17 +29,17 @@ object DigIt_Main: TDigIt_Main
     TabOrder = 0
     Transparent = True
     object tbTake: TToolButton
-      Left = 377
+      Left = 357
       Top = 2
       Action = actTake
     end
     object tbCropNext: TToolButton
-      Left = 517
+      Left = 492
       Top = 2
       Action = actCropNext
     end
     object tbTest1: TToolButton
-      Left = 841
+      Left = 775
       Top = 2
       Caption = 'TEST'
       ImageIndex = 16
@@ -47,8 +47,8 @@ object DigIt_Main: TDigIt_Main
       OnClick = TestClick
     end
     object tbSep1: TToolButton
-      Left = 61
-      Height = 48
+      Left = 63
+      Height = 50
       Top = 2
       Caption = 'tbSep1'
       Style = tbsSeparator
@@ -62,7 +62,7 @@ object DigIt_Main: TDigIt_Main
       Style = tbsDropDown
     end
     object tbSource: TToolButton
-      Left = 69
+      Left = 71
       Top = 2
       Caption = 'Source...'
       DropdownMenu = menuSources
@@ -70,12 +70,12 @@ object DigIt_Main: TDigIt_Main
       Style = tbsButtonDrop
     end
     object tbPreview: TToolButton
-      Left = 305
+      Left = 307
       Top = 2
       Action = actPreview
     end
     object tbWorkSave: TToolButton
-      Left = 781
+      Left = 715
       Top = 2
       Caption = 'WorkSave'
       ImageIndex = 16
@@ -83,21 +83,21 @@ object DigIt_Main: TDigIt_Main
       OnClick = tbWorkSaveClick
     end
     object tbSep2: TToolButton
-      Left = 297
-      Height = 48
+      Left = 299
+      Height = 50
       Top = 2
       Caption = 'tbSep2'
       Style = tbsSeparator
     end
     object tbTimerTake: TToolButton
-      Left = 432
+      Left = 407
       Top = 2
       Action = actTimerTake
       DropdownMenu = menuTimerTake
       Style = tbsDropDown
     end
     object tbDestination: TToolButton
-      Left = 132
+      Left = 134
       Top = 2
       Caption = 'Destination...'
       DropdownMenu = menuDestinations
@@ -105,35 +105,42 @@ object DigIt_Main: TDigIt_Main
       Style = tbsButtonDrop
     end
     object tbCropMode: TToolButton
-      Left = 219
+      Left = 221
       Top = 2
       Caption = 'Crop Mode'
       DropdownMenu = menuCropMode
       ImageIndex = 0
       Style = tbsButtonDrop
     end
-    object ToolButton3: TToolButton
-      Left = 509
-      Height = 48
+    object tbCropSep: TToolButton
+      Left = 484
+      Height = 50
       Top = 2
-      Caption = 'ToolButton3'
+      Caption = 'tbCropSep'
       Style = tbsSeparator
+      Visible = False
     end
     object tbCropAll: TToolButton
-      Left = 707
+      Left = 614
       Top = 2
       Action = actCropAll
     end
     object tbCropPrev: TToolButton
-      Left = 602
+      Left = 554
       Top = 2
       Action = actCropPrev
+    end
+    object tbCropSummary: TToolButton
+      Left = 665
+      Top = 2
+      AutoSize = True
+      Visible = False
     end
   end
   object imgManipulation: TBGRAImageManipulation
     Left = 230
-    Height = 392
-    Top = 58
+    Height = 390
+    Top = 60
     Width = 594
     Align = alClient
     AnchorSize = 9
@@ -152,8 +159,8 @@ object DigIt_Main: TDigIt_Main
   end
   object rollCrops: TBCExpandPanel
     Left = 0
-    Height = 392
-    Top = 58
+    Height = 390
+    Top = 60
     Width = 230
     Align = alLeft
     Background.Color = clBtnFace
@@ -195,7 +202,7 @@ object DigIt_Main: TDigIt_Main
     ButtonPosition = akLeft
     ButtonSize = 20
     Button.Left = 0
-    Button.Height = 392
+    Button.Height = 390
     Button.Top = 0
     Button.Width = 20
     Button.Caption = 'Crop Areas'
@@ -1292,8 +1299,8 @@ object DigIt_Main: TDigIt_Main
   end
   object rollCounters: TBCExpandPanel
     Left = 824
-    Height = 392
-    Top = 58
+    Height = 390
+    Top = 60
     Width = 200
     Align = alRight
     Background.Color = clBtnFace
@@ -1335,7 +1342,7 @@ object DigIt_Main: TDigIt_Main
     ButtonPosition = akLeft
     ButtonSize = 20
     Button.Left = 0
-    Button.Height = 392
+    Button.Height = 390
     Button.Top = 0
     Button.Width = 20
     Button.Caption = 'Page Counters'
@@ -2442,35 +2449,35 @@ object DigIt_Main: TDigIt_Main
     Left = 704
     Top = 88
     object actPreview: TAction
-      Caption = 'Preview (F2)'
+      Caption = 'Preview'
       Enabled = False
       ImageIndex = 6
       ShortCut = 113
       OnExecute = actPreviewExecute
     end
     object actTake: TAction
-      Caption = 'Take (F3)'
+      Caption = 'Take'
       Enabled = False
       ImageIndex = 7
       ShortCut = 114
       OnExecute = actTakeExecute
     end
     object actCropNext: TAction
-      Caption = 'Crop Next (F4)'
+      Caption = 'Crop Next'
       ImageIndex = 8
       ShortCut = 115
       Visible = False
       OnExecute = actCropNextExecute
     end
     object actCropPrev: TAction
-      Caption = 'Crop Previous (F5)'
+      Caption = 'Crop Prev'
       ImageIndex = 9
       ShortCut = 116
       Visible = False
       OnExecute = actCropPrevExecute
     end
     object actCropAll: TAction
-      Caption = 'Crop All (F6)'
+      Caption = 'Crop All'
       ImageIndex = 10
       ShortCut = 117
       Visible = False
