@@ -9,7 +9,7 @@
 {"hash":128425010,"name":"tdigit_main.tbsep2.caption","sourcebytes":[116,98,83,101,112,50],"value":"tbSep2"},
 {"hash":107942190,"name":"tdigit_main.tbdestination.caption","sourcebytes":[68,101,115,116,105,110,97,116,105,111,110,46,46,46],"value":"Destination..."},
 {"hash":103124789,"name":"tdigit_main.tbcropmode.caption","sourcebytes":[67,114,111,112,32,77,111,100,101],"value":"Crop Mode"},
-{"hash":160486419,"name":"tdigit_main.toolbutton3.caption","sourcebytes":[84,111,111,108,66,117,116,116,111,110,51],"value":"ToolButton3"},
+{"hash":177611680,"name":"tdigit_main.tbcropsep.caption","sourcebytes":[116,98,67,114,111,112,83,101,112],"value":"tbCropSep"},
 {"hash":38544099,"name":"tdigit_main.rollcrops.button.caption","sourcebytes":[67,114,111,112,32,65,114,101,97,115],"value":"Crop Areas"},
 {"hash":4687233,"name":"tdigit_main.btbox_add.hint","sourcebytes":[65,100,100,32,97,32,67,114,111,112,32,65,114,101,97],"value":"Add a Crop Area"},
 {"hash":43,"name":"tdigit_main.btbox_add.caption","sourcebytes":[43],"value":"+"},
@@ -73,11 +73,11 @@
 {"hash":45,"name":"tdigit_main.btcounter_del.caption","sourcebytes":[45],"value":"-"},
 {"hash":183566387,"name":"tdigit_main.savepicture.title","sourcebytes":[83,97,118,101,32,105,109,97,103,101,32,97,115],"value":"Save image as"},
 {"hash":101181333,"name":"tdigit_main.openpicture.title","sourcebytes":[79,112,101,110,32,97,110,32,101,120,105,115,116,105,110,103,32,105,109,97,103,101],"value":"Open an existing image"},
-{"hash":166331833,"name":"tdigit_main.actpreview.caption","sourcebytes":[80,114,101,118,105,101,119,32,40,70,50,41],"value":"Preview (F2)"},
-{"hash":24286169,"name":"tdigit_main.acttake.caption","sourcebytes":[84,97,107,101,32,40,70,51,41],"value":"Take (F3)"},
-{"hash":100702473,"name":"tdigit_main.actcropnext.caption","sourcebytes":[67,114,111,112,32,78,101,120,116,32,40,70,52,41],"value":"Crop Next (F4)"},
-{"hash":259483465,"name":"tdigit_main.actcropprev.caption","sourcebytes":[67,114,111,112,32,80,114,101,118,105,111,117,115,32,40,70,53,41],"value":"Crop Previous (F5)"},
-{"hash":141880777,"name":"tdigit_main.actcropall.caption","sourcebytes":[67,114,111,112,32,65,108,108,32,40,70,54,41],"value":"Crop All (F6)"},
+{"hash":126668695,"name":"tdigit_main.actpreview.caption","sourcebytes":[80,114,101,118,105,101,119],"value":"Preview"},
+{"hash":370709,"name":"tdigit_main.acttake.caption","sourcebytes":[84,97,107,101],"value":"Take"},
+{"hash":103089764,"name":"tdigit_main.actcropnext.caption","sourcebytes":[67,114,111,112,32,78,101,120,116],"value":"Crop Next"},
+{"hash":103101014,"name":"tdigit_main.actcropprev.caption","sourcebytes":[67,114,111,112,32,80,114,101,118],"value":"Crop Prev"},
+{"hash":157435020,"name":"tdigit_main.actcropall.caption","sourcebytes":[67,114,111,112,32,65,108,108],"value":"Crop All"},
 {"hash":49402830,"name":"tdigit_main.actprojectnew.caption","sourcebytes":[78,101,119,32,80,114,111,106,101,99,116,32,46,46,46],"value":"New Project ..."},
 {"hash":21033678,"name":"tdigit_main.actprojectopen.caption","sourcebytes":[97,99,116,80,114,111,106,101,99,116,79,112,101,110],"value":"actProjectOpen"},
 {"hash":20843701,"name":"tdigit_main.actprojectsave.caption","sourcebytes":[97,99,116,80,114,111,106,101,99,116,83,97,118,101],"value":"actProjectSave"},
