@@ -2,6 +2,8 @@ DigIt CHANGE LOG
 ======================
 
 2024/11/
+	22 Several UI adjustments;
+	   First write of Custom Crop Logic (to be completed and tested thoroughly)
         21 Added Counters RemoveAllButFirst;
 	   Changed GetCurrentCounter to work with CropMode;
 	   Changed Temp Path Location to Path_Config\tmp;
